--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>главная страница</h1>
+    <header class="header">
+        <h1>шапка проекта</h1>
+    </header>
 </body>
 </html>
