--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
 </head>
-<body>
-    <h1>главная страница</h1>
+<body><main class="main">
+    <h1>основной контент</h1>
+</main>
 </body>
 </html>
