--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
 <body><main class="main">
     <h1>основной контент</h1>
 </main>
+<footer class="footer">
+    <h1>подвал сайта</h1>
+</footer>
 </body>
 </html>
